--- a/example.yml
+++ b/example.yml
@@ -1,17 +1,20 @@
 config:
   checks:
     - simple-check: []
+    - retry: [1, 2, 3, 4, 5, 6, 7, 8, 9]
     - wait-for: [2, 5, 7, 10, 15, 30, 60]
-    - wait-for: [5, 10, 15, 20, 25, 30, 45, 60, 90, 120]
+    - wait-for-long: [5, 10, 15, 20, 25, 30, 45, 60, 90, 120]
   actions:
     - youtube-dl:
-        exec: youtube-dl {}
+        exec: youtube-dl {link}
     - telegram:
-        exec: telegram-send {}
+        exec: telegram-send {title}
     - youtube:
         call:
           - youtube-dl
           - telegram
+    - echo:
+        exec: echo {title} {link}
   paths:
     working_directory: /data/download/youtube
 
@@ -20,11 +23,13 @@ feeds:
   - walulis-daily:
       url: https://www.youtube.com/feeds/videos.xml?channel_id=UCo4693Ony4slDY5hR0ny-bw
       check:
-        - daily 20:00 *wait-for-long
-      action: youtube
+        - Mon 20:00 *wait-for-long
+      action: echo
   - walulis:
+      disabled: true
       url: https://www.youtube.com/feeds/videos.xml?channel_id=UChkVOG0PqkXIHHmkBGG15Ig
       check:
-        - Di+Thu 16:16 *wait-for
+        - daily 14:43 *wait-for
+        - Tue+Thu 16:16 *wait-for
       action: youtube
 
