--- a/example.yml
+++ b/example.yml
@@ -1,14 +1,13 @@
 config:
   cache-file: cache
-  log-file: log
+  log-file: ../log
   environ:
     cwd: /data/downloads/youtube/{feed_name}
     env:
       - HOME: /home/rss
-      - TEST: TEST
     var:
       - title_: var['title'].replace(" ", "_").replace("?", "").replace("|", "")
-      - baseurl: 'http://gallery.tux-server.pnhofmann.de/photos/youtube-download/'
+      - baseurl: '"http://gallery.tux-server.pnhofmann.de/photos/youtube-download/"'
 
 checks:
   - once: []
@@ -18,24 +17,21 @@ checks:
 
 actions:
   - youtube-dl-720p:
-      exec: youtube-dl -f '(bestvideo[vcodec^=vp9][width<=1280]/bestvideo[ext=webm][width<=1920]/bestvideo[width<=1280]/bestvideo)+(bestaudio[acodec=opus]/bestaudio[acodec=vorbis]/bestaudio[ext=webm]/bestaudio)/best' '{link}' -o '{published}-{title_}'
+      exec: echo youtube-dl -f '(bestvideo[vcodec^=vp9][width<=1280]/bestvideo[ext=webm][width<=1920]/bestvideo[width<=1280]/bestvideo)+(bestaudio[acodec=opus]/bestaudio[acodec=vorbis]/bestaudio[ext=webm]/bestaudio)/best' '{link}' -o '{published}-{title_}'
   - youtube-dl-1080p:
-      exec: youtube-dl -f '(bestvideo[vcodec^=vp9][width<=1920]/bestvideo[ext=webm][width<=1920]/bestvideo[width<=1920]/bestvideo)+(bestaudio[acodec=opus]/bestaudio[acodec=vorbis]/bestaudio[ext=webm]/bestaudio)/best' '{link}' -o '{published}-{title_}'
-  - telegram:
-      exec: telegram-send '{title}'
+      exec: echo youtube-dl -f '(bestvideo[vcodec^=vp9][width<=1920]/bestvideo[ext=webm][width<=1920]/bestvideo[width<=1920]/bestvideo)+(bestaudio[acodec=opus]/bestaudio[acodec=vorbis]/bestaudio[ext=webm]/bestaudio)/best' '{link}' -o '{published}-{title_}'
   - telegram-url:
-      exec: telegram-send '{url}/{published}---{title_}.webm'
+      exec: telegram-send '{baseurl}/{published}---{title_}.webm'
   - youtube-720p:
       call:
         - youtube-dl-720p
-        - telegram
         - telegram-url
   - youtube-1080p:
       call:
         - youtube-dl-1080p
-        - telegram
+        - telegram-url
   - xkcd-download:
-      python: xkcd-download
+      python: print("xkcd")# xkcd-download
   - echo:
       exec: echo {title} {link}
   - test:
